# gpt_bot

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: blank.yml
src/: bot_main.py  main.py
src/config/: config.py
src/database/: create_db.py  database_func.py  main.py  models.py  update_db.py
src/func/: api_func.py  custom_func.py
src/handlers/custom/: audio.py  picture.py  text.py
src/handlers/default/: help.py  start.py
src/keyboards/: reply.py
