[project]
name = "gpt-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Artur_Lazarevich",email = "compact20002008@gmail.com"}
]
requires-python = ">=3.12"
packages = [
    { include = "src" }
]
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.16.1,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "types-requests (>=2.32.4.20250611,<3.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"


[tool.mypy]
ignore_missing_imports = true
exclude = "migrations/.*"
